[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = tzfinderapi
url = https://github.com/mblackgeo/timezone-finder-api.git
description = A simple API to get the timezone ID given latitude/longitude
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Black
author_email = mblack@sparkgeo.com
zip_safe = False

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    fastapi[all]~=0.70.0
    timezonefinder[numba]~=5.0
    mangum~=0.12.3
    uvicorn~=0.11.8
tests_require =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov tzfinderapi
    --cov-report term-missing:skip-covered
    -p no:warnings